Project SaaS_Funnel_Builder {
  database_type: 'MySQL'
  Note: '''
    # SaaS Funnel Builder Database

    This database is designed to support a SaaS application focused on building and managing sales funnels. 
    It contains information related to users, agencies, subaccounts, and various elements related to sales funnels like pipelines, tickets, and automation.

    ## Core Tables and Design Rationale

    ### `User`

    - **Purpose**: Manages user information and roles.
    - **Design Rationale**: Users can have different roles (AGENCY_OWNER, AGENCY_ADMIN, etc.), which determine their access levels and capabilities within the system. Linking users to agencies enables multi-tenancy support.

    ### `Permissions`

    - **Purpose**: Defines access levels for users within subaccounts.
    - **Design Rationale**: Enables granular access control, ensuring users only access data pertinent to their role and permissions.

    ### `Agency`

    - **Purpose**: Stores information about marketing agencies.
    - **Design Rationale**: Central to the multi-tenant architecture, allowing multiple agencies to operate within the same platform while maintaining separation of data.

    ### `SubAccount`

    - **Purpose**: Represents clients or projects under an agency.
    - **Design Rationale**: Allows agencies to manage multiple clients or projects, each with its unique settings and data, under a single agency umbrella.

    ### `Tag`

    - **Purpose**: Enables tagging of different entities for organization and filtering.
    - **Design Rationale**: Adds flexibility in managing and categorizing records, such as contacts or tickets, within subaccounts.

    ### `Pipeline`, `Lane`, and `Ticket`

    - **Purpose**: These tables are core to the funnel management system, representing the stages (Lanes) and individual items (Tickets) in a sales or project Pipeline.
    - **Design Rationale**: Reflects the workflow of sales funnels, where tickets move through various stages, allowing for tracking of progress and efficiency.

    ### `Trigger` and `Automation`

    - **Purpose**: Facilitate automated actions based on specific conditions.
    - **Design Rationale**: Enhances efficiency by automating routine tasks, such as contact creation, based on predefined triggers.

    ### `Contact`

    - **Purpose**: Manages customer or lead information.
    - **Design Rationale**: Essential for tracking interactions and progress within sales funnels.

    ### `Funnel`

    - **Purpose**: Represents a complete sales or marketing funnel.
    - **Design Rationale**: Allows for the creation and management of multiple, distinct funnels, each with its stages, pages, and metrics.

    ### `Media`, `FunnelPage`, and `ClassName`

    - **Purpose**: Support content management within funnels, including media files, web pages, and CSS customization.
    - **Design Rationale**: Provides flexibility and customization for users to design and deploy tailored funnel experiences.

    ### `AgencySidebarOption` and `SubAccountSidebarOption`

    - **Purpose**: Customizes the navigation options available to different users.
    - **Design Rationale**: Enhances user experience by allowing agencies and subaccounts to tailor the platform's interface to their needs.

    ### `Invitation`, `Notification`, and `Subscription`

    - **Purpose**: These tables support user collaboration, communication, and subscription management.
    - **Design Rationale**: Facilitates user engagement, system alerts, and management of service plans, crucial for a SaaS platform's operation and scalability.
  '''
}

Enum Role {
  AGENCY_OWNER
  AGENCY_ADMIN
  SUBACCOUNT_USER
  SUBACCOUNT_GUEST
}

Enum Icon {
  settings
  chart
  calendar
  check
  chip
  compass
  database
  flag
  home
  info
  link
  lock
  messages
  notification
  payment
  power
  receipt
  shield
  star
  tune
  videorecorder
  wallet
  warning
  headphone
  send
  pipelines
  person
  category
  contact
  clipboardIcon
}

Enum TriggerTypes {
  CONTACT_FORM
}

Enum ActionType {
  CREATE_CONTACT
}

Enum InvitationStatus {
  ACCEPTED
  REVOKED
  PENDING
}

Enum Plan {
  price_1Oxy8iFFLDxsEeNR7FNetB02
  price_1Oxy9vFFLDxsEeNRnJLlvR86
}

Table User {
  id varchar(36) [pk]
  name varchar(255)
  avatarUrl longtext
  email varchar(255) [unique]
  createdAt datetime
  updatedAt datetime
  role Role
  agencyId varchar(36) [ref: > Agency.id]
}

Table Permissions {
  id varchar(36) [pk]
  email varchar(255)
  subAccountId varchar(36) [ref: > SubAccount.id]
  access boolean
}

Table Agency {
  id varchar(36) [pk]
  connectAccountId varchar(255)
  customerId varchar(255)
  name varchar(255)
  agencyLogo longtext
  companyEmail longtext
  companyPhone varchar(255)
  whiteLabel boolean
  address varchar(255)
  city varchar(255)
  zipCode varchar(255)
  state varchar(255)
  country varchar(255)
  goal int
  createdAt datetime
  updatedAt datetime
}

Table SubAccount {
  id varchar(36) [pk]
  connectAccountId varchar(255)
  name varchar(255)
  subAccountLogo longtext
  createdAt datetime
  updatedAt datetime
  companyEmail longtext
  companyPhone varchar(255)
  goal int
  address varchar(255)
  city varchar(255)
  zipCode varchar(255)
  state varchar(255)
  country varchar(255)
  agencyId varchar(36) [ref: > Agency.id]
}

Table Tag {
  id varchar(36) [pk]
  name varchar(255)
  color varchar(255)
  createdAt datetime
  updatedAt datetime
  subAccountId varchar(36) [ref: > SubAccount.id]
}

Table Pipeline {
  id varchar(36) [pk]
  name varchar(255)
  createdAt datetime
  updatedAt datetime
  subAccountId varchar(36) [ref: > SubAccount.id]
  Note: 'Defines a series of stages (lanes) to track the progress of sales or projects.'
}

Table Lane {
  id varchar(36) [pk]
  name varchar(255)
  createdAt datetime
  updatedAt datetime
  pipelineId varchar(36) [ref: > Pipeline.id]
  order int
  Note: 'Defines a series of stages (lanes) to track the progress of sales or projects.'

}

Table Ticket {
  id varchar(36) [pk]
  name varchar(255)
  createdAt datetime
  updatedAt datetime
  laneId varchar(36) [ref: > Lane.id]
  order int
  value decimal(10,2)
  description text
  customerId varchar(36) [ref: > Contact.id]
  assignedUserId varchar(36) [ref: > User.id]
  Note: 'Tracks individual items, such as customer inquiries or tasks, moving through the pipeline.'
}

Table Trigger {
  id varchar(36) [pk]
  name varchar(255)
  type TriggerTypes
  createdAt datetime
  updatedAt datetime
  subAccountId varchar(36) [ref: > SubAccount.id]
  Note: 'Defines a condition or event that initiates an automation within the system.'
}

Table Automation {
  id varchar(36) [pk]
  name varchar(255)
  createdAt datetime
  updatedAt datetime
  triggerId varchar(36) [ref: > Trigger.id]
  published boolean
  subAccountId varchar(36) [ref: > SubAccount.id]
  Note: 'Represents a set of actions to be performed automatically when a trigger is activated.'
}

Table AutomationInstance {
  id varchar(36) [pk]
  createdAt datetime
  updatedAt datetime
  automationId varchar(36) [ref: > Automation.id]
  active boolean
}

Table Action {
  id varchar(36) [pk]
  name varchar(255)
  type ActionType
  createdAt datetime
  updatedAt datetime
  automationId varchar(36) [ref: > Automation.id]
  order int
  laneId varchar(36)
}

Table Contact {
  id varchar(36) [pk]
  name varchar(255)
  email varchar(255)
  createdAt datetime
  updatedAt datetime
  subAccountId varchar(36) [ref: > SubAccount.id]
}

Table Media {
  id varchar(36) [pk]
  type varchar(255)
  name varchar(255)
  link varchar(255) [unique]
  subAccountId varchar(36) [ref: > SubAccount.id]
  createdAt datetime
  updatedAt datetime
}

Table Funnel {
  id varchar(36) [pk]
  name varchar(255)
  createdAt datetime
  updatedAt datetime
  description text
  published boolean
  subDomainName varchar(255) [unique]
  favicon text
  subAccountId varchar(36) [ref: > SubAccount.id]
  Note: 'Represents a sales or marketing funnel, which is a multi-step process designed to guide potential customers towards a purchase.'
}

Table ClassName {
  id varchar(36) [pk]
  name varchar(255)
  color varchar(255)
  createdAt datetime
  updatedAt datetime
  funnelId varchar(36) [ref: > Funnel.id]
  customData longtext
}

Table FunnelPage {
  id varchar(36) [pk]
  name varchar(255)
  pathName varchar(255)
  createdAt datetime
  updatedAt datetime
  visits int
  content longtext
  order int
  previewImage text
  funnelId varchar(36) [ref: > Funnel.id]
}

Table AgencySidebarOption {
  id varchar(36) [pk]
  name varchar(255)
  link varchar(255)
  icon Icon
  agencyId varchar(36) [ref: > Agency.id]
  createdAt datetime
  updatedAt datetime
}

Table SubAccountSidebarOption {
  id varchar(36) [pk]
  name varchar(255)
  link varchar(255)
  icon Icon
  subAccountId varchar(36) [ref: > SubAccount.id]
  createdAt datetime
  updatedAt datetime
}

Table Invitation {
  id varchar(36) [pk]
  email varchar(255) [unique]
  agencyId varchar(36) [ref: > Agency.id]
  status InvitationStatus
  role Role
}

Table Notification {
  id varchar(36) [pk]
  notification text
  agencyId varchar(36) [ref: > Agency.id]
  subAccountId varchar(36) [ref: > SubAccount.id]
  userId varchar(36) [ref: > User.id]
  createdAt datetime
  updatedAt datetime
}

Table Subscription {
  id varchar(36) [pk]
  createdAt datetime
  updatedAt datetime
  plan Plan
  price varchar(255)
  active boolean
  priceId varchar(255)
  customerId varchar(255)
  currentPeriodEndDate datetime
  subscritiptionId varchar(255) [unique]
  agencyId varchar(36) [ref: > Agency.id]
  Note: 'Manages subscription information for agencies, including the plan and status.'
}

Table AddOns {
  id varchar(36) [pk]
  createdAt datetime
  updatedAt datetime
  name varchar(255)
  active boolean
  priceId varchar(255) [unique]
  agencyId varchar(36) [ref: > Agency.id]
}